[package]
name = "asmu"
description = "aws secrets manager utlity"
version = "0.0.0"
edition = "2021"
authors = ["whutchinson98"]
include = ["src/**/*.rs"]
categories = ["command-line-utilities"]
homepage = "https://github.com/whutchinson98/asmu"
repository = "https://github.com/whutchinson98/asmu"
license = "MIT"
readme = "README.md"
keywords = [
    "cli",
    "command",
    "command-line",
    "aws",
    "secrets-manager",
]

[dependencies]
aws-config = "0.55.3"
aws-sdk-secretsmanager = "0.28.0"
serde = {version = "1.0.104", features = ["derive"]}
tokio = {version="1.29.1", features=["full"]}
clap = { version = "4.3.19", features = ["derive"] }
serde_json = "1.0.94"
